--- a/extra/website/public/index.html
+++ b/extra/website/public/index.html
@@ -1,89 +1,137 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Redirecting to PraiseUp</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/10.13.2/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/10.13.2/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/10.13.2/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+        <!-- update the version number as needed -->
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-app-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-auth-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-database-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-firestore-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-functions-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-messaging-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-storage-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-analytics-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-remote-config-compat.js"></script>
+        <script
+            defer
+            src="/__/firebase/10.13.2/firebase-performance-compat.js"></script>
+        <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+        <style>
+            body {
+                background: #eceff1;
+                color: rgba(0, 0, 0, 0.87);
+                font-family: Roboto, Helvetica, Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+            }
+            #message {
+                background: #f2f2f2;
+                max-width: 360px;
+                margin: 100px auto 16px;
+                padding: 32px 24px;
+                border-radius: 18px;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+            #loading-spinner {
+                margin: 16px auto;
+                border: 4px solid rgba(0, 0, 0, 0.1);
+                border-top: 4px solid #039be5;
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                animation: spin 1s linear infinite;
+            }
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+            #message h1 {
+                font-size: 22px;
+                font-weight: 300;
+                color: rgba(0, 0, 0, 0.6);
+                margin: 0 0 16px;
+            }
+
+            @keyframes spin {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            @media (max-width: 600px) {
+                body,
+                #message {
+                    margin-top: 0;
+                    background: white;
+                    box-shadow: none;
+                }
+
+                body {
+                    border-top: 16px solid #039be5;
+                }
+            }
+        </style>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const url = window.location.pathname;
+                const segments = url.split("/");
+
+                if (
+                    segments.length >= 3 &&
+                    (segments[1] === "song" || segments[1] === "album")
+                ) {
+                    const id = segments[2];
+                    const scheme = segments[1];
+
+                    if (navigator.userAgent.includes("Android")) {
+                        window.location.href = `praiseup://${scheme}/${id}`;
+                    } else {
+                        document.querySelector("#message h1").textContent =
+                            "This link only works on Android devices.";
+                    }
+                } else {
+                    document.querySelector("#message h1").textContent =
+                        "Invalid URL, please check the link.";
+                }
+            });
+        </script>
+    </head>
+
+    <body>
+        <div id="message">
+            <h1>Redirecting to PraiseUp...</h1>
+            <div id="loading-spinner"></div>
+            <p>
+                If you are not redirected, please ensure the app is installed.
+            </p>
+        </div>
+    </body>
 </html>
