--- a/extra/website/public/index.html
+++ b/extra/website/public/index.html
@@ -104,9 +104,13 @@
                 const url = window.location.pathname;
                 const segments = url.split("/");
 
+                const uuidRegex =
+                    /^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$/;
+
                 if (
                     segments.length >= 3 &&
-                    (segments[1] === "song" || segments[1] === "album")
+                    (segments[1] === "song" || segments[1] === "album") &&
+                    uuidRegex.test(segments[2])
                 ) {
                     const id = segments[2];
                     const scheme = segments[1];
