--- a/extra/website/public/index.html
+++ b/extra/website/public/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Redirecting to PraiseUp</title>
+        <!-- icon -->
+        <link rel="icon" href="logo.png" />
+        <title>PraiseUp</title>
 
-        <!-- update the version number as needed -->
         <script
             defer
             src="/__/firebase/10.13.2/firebase-app-compat.js"></script>
@@ -38,68 +39,52 @@
             src="/__/firebase/10.13.2/firebase-performance-compat.js"></script>
         <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-        <style>
-            body {
-                background: #eceff1;
-                color: rgba(0, 0, 0, 0.87);
-                font-family: Roboto, Helvetica, Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-            }
-            #message {
-                background: #f2f2f2;
-                max-width: 360px;
-                margin: 100px auto 16px;
-                padding: 32px 24px;
-                border-radius: 18px;
-                text-align: center;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-
-            #loading-spinner {
-                margin: 16px auto;
-                border: 4px solid rgba(0, 0, 0, 0.1);
-                border-top: 4px solid #039be5;
-                border-radius: 50%;
-                width: 40px;
-                height: 40px;
-                animation: spin 1s linear infinite;
-            }
-
-            #message h1 {
-                font-size: 22px;
-                font-weight: 300;
-                color: rgba(0, 0, 0, 0.6);
-                margin: 0 0 16px;
-            }
-
-            @keyframes spin {
-                0% {
-                    transform: rotate(0deg);
-                }
-                100% {
-                    transform: rotate(360deg);
-                }
-            }
-
-            @media (max-width: 600px) {
-                body,
-                #message {
-                    margin-top: 0;
-                    background: white;
-                    box-shadow: none;
-                }
-
-                body {
-                    border-top: 16px solid #039be5;
-                }
-            }
-        </style>
-
         <script>
+            const secretKey = "secretKey";
+            const algorithm = "aes-256-cbc";
+            const ivLength = 16;
+
+            function restoreUUID(encryptedUUID, iv) {
+                const crypto = window.crypto.subtle;
+
+                const ivBuffer = hexStringToBuffer(iv);
+
+                const encoder = new TextEncoder();
+                const keyBuffer = encoder.encode(secretKey);
+
+                return crypto
+                    .importKey("raw", keyBuffer, { name: "AES-CBC" }, false, [
+                        "decrypt",
+                    ])
+                    .then(function (key) {
+                        return crypto.decrypt(
+                            { name: "AES-CBC", iv: ivBuffer },
+                            key,
+                            hexStringToBuffer(encryptedUUID)
+                        );
+                    })
+                    .then(function (decryptedBuffer) {
+                        const decoder = new TextDecoder();
+                        return decoder.decode(decryptedBuffer);
+                    })
+                    .catch(function (error) {
+                        console.error("Error during decryption:", error);
+                        return null;
+                    });
+            }
+
+            function hexStringToBuffer(hexString) {
+                const length = hexString.length / 2;
+                const buffer = new ArrayBuffer(length);
+                const view = new Uint8Array(buffer);
+
+                for (let i = 0; i < length; i++) {
+                    view[i] = parseInt(hexString.substr(i * 2, 2), 16);
+                }
+
+                return buffer;
+            }
+
             document.addEventListener("DOMContentLoaded", function () {
                 const url = window.location.pathname;
                 const segments = url.split("/");
@@ -114,32 +99,197 @@
                         segments[1] === "personal") &&
                     uuidRegex.test(segments[2])
                 ) {
-                    const id = segments[2];
+                    const encryptedUUID = segments[2];
                     let scheme = segments[1];
 
-                    if (scheme === "personal") scheme = "album";
+                    const iv = segments[3];
 
-                    if (navigator.userAgent.includes("Android")) {
-                        window.location.href = `praiseup://home/${scheme}/${id}`;
-                    } else {
-                        document.querySelector("#message h1").textContent =
-                            "This link only works on Android devices.";
-                    }
+                    restoreUUID(encryptedUUID, iv).then(
+                        function (decryptedUUID) {
+                            if (decryptedUUID) {
+                                if (scheme === "personal") scheme = "album";
+
+                                if (navigator.userAgent.includes("Android")) {
+                                    window.location.href = `praiseup://home/${scheme}/${decryptedUUID}`;
+                                } else {
+                                    document.querySelector(
+                                        "#message h1"
+                                    ).textContent =
+                                        "This link only works on Android devices.";
+                                }
+                            } else {
+                                document.querySelector(
+                                    "#message h1"
+                                ).textContent = "Failed to decrypt the UUID.";
+                            }
+                        }
+                    );
                 } else {
                     document.querySelector("#message h1").textContent =
                         "Invalid URL, please check the link.";
                 }
             });
         </script>
+
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                background: linear-gradient(
+                    135deg,
+                    #039be5,
+                    #5e92f3
+                ); /* Subtle gradient background */
+                font-family: "Roboto", Helvetica, Arial, sans-serif;
+                color: #333;
+            }
+
+            #message {
+                background: #ffffff;
+                max-width: 380px;
+                padding: 40px 30px;
+                border-radius: 20px;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); /* Soft shadow */
+                animation: fadeIn 1s ease-out; /* Smooth fade-in animation */
+            }
+
+            @keyframes fadeIn {
+                0% {
+                    opacity: 0;
+                    transform: translateY(20px);
+                }
+                100% {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
+
+            #logo {
+                width: 120px;
+                height: auto;
+                margin-bottom: 20px;
+                opacity: 0.8;
+                border-radius: 20px;
+            }
+
+            #message h1 {
+                font-size: 26px;
+                font-weight: 600;
+                color: #333;
+                margin-bottom: 20px;
+                letter-spacing: 0.5px;
+            }
+
+            #loading-spinner {
+                margin: 30px auto;
+                border: 6px solid rgba(0, 0, 0, 0.1);
+                border-top: 6px solid #039be5;
+                border-radius: 50%;
+                width: 60px;
+                height: 60px;
+                animation: spin 1.5s linear infinite;
+            }
+
+            #message p {
+                font-size: 16px;
+                color: #777;
+                margin-top: 10px;
+                font-weight: 300;
+            }
+
+            @keyframes spin {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            /* Button to go back to homepage or re-try */
+            #retry-button {
+                background-color: #039be5;
+                color: white;
+                border: none;
+                padding: 12px 24px;
+                font-size: 16px;
+                font-weight: 500;
+                border-radius: 30px;
+                margin-top: 20px;
+                cursor: pointer;
+                transition: all 0.3s;
+            }
+
+            #retry-button:hover {
+                background-color: #0288d1;
+                transform: scale(1.05);
+            }
+
+            @media (max-width: 600px) {
+                body {
+                    padding: 20px;
+                }
+
+                #message {
+                    padding: 25px 20px;
+                    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+                }
+
+                #logo {
+                    width: 100px;
+                }
+
+                #message h1 {
+                    font-size: 22px;
+                    margin-bottom: 15px;
+                }
+
+                #loading-spinner {
+                    width: 50px;
+                    height: 50px;
+                }
+
+                #retry-button {
+                    padding: 10px 20px;
+                    font-size: 14px;
+                }
+            }
+        </style>
     </head>
 
     <body>
         <div id="message">
+            <!-- Logo image -->
+            <img src="logo.png" alt="Logo" id="logo" />
+
+            <!-- Message Heading -->
             <h1>Redirecting to PraiseUp...</h1>
+
+            <!-- Loading Spinner -->
             <div id="loading-spinner"></div>
+
+            <!-- Instructions Text -->
             <p>
                 If you are not redirected, please ensure PraiseUp is installed.
             </p>
+
+            <!-- Retry Button (optional) -->
+            <button id="retry-button" onclick="window.location.reload()">
+                Retry
+            </button>
         </div>
     </body>
 </html>
